feature: add ordering refactoring: reduce extra code